--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vinayakmk19.github.io/Dropdown-React/",
+  "homepage": "https://vinayakmk19.github.io/Dropdown-React",
   "name": "react-dropdown",
   "version": "0.1.0",
   "private": false,
